# logtap

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/logtap/api/: app.py
src/logtap/api/routes/: logs.py  parsed.py
src/logtap/cli/: main.py
src/logtap/cli/commands/: query.py  serve.py  tail.py
src/logtap/core/: __init__.py  search.py
src/logtap/core/parsers/: __init__.py  apache.py  auto.py  json_parser.py  nginx.py  syslog.py
src/logtap/models/: __init__.py  responses.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_parsers.py  test_reader.py  test_search.py  test_validation.py
